# heroplanner-v2

./: .gitignore  CLAUDE.md  Makefile  index.html  package-lock.json  package.json  vite.config.ts
.claude/commands/: commit.md  save-and-commit.md
notes/: EXECUTION-PLAN.md  TODO.md  TODO2.md  TODO3.md  dev-workflows.md  game_mechanics.md  long_term_todo.md
public/images/: fix.sh
scripts/: migrate-json-to-sqlite.py  migrate-zip-to-sqlite.py  smoke-test.sh  sync-to-windows.sh  upscale-blind-test.py  upscale-icons.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: archetypes.rs  boosts.rs  builds.rs  calc.rs  engine_cmds.rs  mod.rs  powers.rs  powersets.rs  settings.rs  utils.rs
src-tauri/src/engine/: build.rs  build_view.rs  cache.rs  calc.rs  game_data.rs  mod.rs
src-tauri/tests/: integration.rs
src/components/: ErrorBoundary.tsx
src/components/planner/: AccoladesTab.tsx  BoostSetBrowser.tsx  ConfirmDialog.tsx  DetailPane.tsx  EnhancementHoverCard.tsx  EnhancementPicker.tsx  EnhancementSlot.tsx  Header.tsx  HeroInfo.tsx  IncarnatesTab.tsx  InherentsTab.tsx  LeftPanel.tsx  PowerHoverCard.tsx  PowerSetSelector.tsx  PowerSlotCard.tsx  RightPanel.tsx  SetBonusesTab.tsx  Settings.tsx  (+1 more)
src/lib/: api.ts  enhancement-data.ts  images.ts  mock-data.ts  utils.ts
src/stores/: heroStore.ts
src/styles/: globals.css
src/types/: models.ts
(+10 files in other folders)
