[package]
name = "heroplanner-v2"
version = "0.1.0"
description = "City of Heroes Hero Planner"
authors = ["Charles Mihran"]
edition = "2021"

[lib]
name = "heroplanner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2"
